--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -56,7 +56,7 @@
     <audio data-key="76" src="sounds/tink.wav"></audio>
 
     <script>
-      window.addEventListener('keydown', (e) => {
+      const playSound = (e) => {
         const audio = document.querySelector(`audio[data-key="${e.keyCode}"`);
         const div = document.querySelector(`div[data-key="${e.keyCode}"]`);
         if (!audio) {
@@ -65,7 +65,7 @@
         audio.currentTime = 0;
         audio.play();
         div.classList.add('playing');
-      });
+      };
 
       function removeTransition(e) {
         if (e.propertyName !== 'transform') {
@@ -78,6 +78,8 @@
       keys.forEach((key) => {
         key.addEventListener('transitionend', removeTransition);
       });
+
+      window.addEventListener('keydown', playSound);
     </script>
   </body>
 </html>
