--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -1,22 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Type Ahead 👀</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Type Ahead 👀</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <form class="search-form">
+      <input type="text" class="search" placeholder="City or State" />
+      <ul class="suggestions">
+        å
+        <li>Filter for a city</li>
+        <li>or a state</li>
+      </ul>
+    </form>
+    <script>
+      const endpoint =
+        'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+      const cities = [];
+      const search = document.querySelector('.search');
+      const suggestions = document.querySelector('.suggestions');
 
-  <form class="search-form">
-    <input type="text" class="search" placeholder="City or State">
-    <ul class="suggestions">
-      <li>Filter for a city</li>
-      <li>or a state</li>
-    </ul>
-  </form>
-<script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+      fetch(endpoint)
+        .then((blob) => blob.json())
+        .then((data) => cities.push(...data));
 
-</script>
-</body>
+      const findMatches = (wordToMatch, citiesArray) => {
+        return citiesArray.filter((place) => {
+          const regex = new RegExp(wordToMatch, 'gi');
+          return place.city.match(regex) || place.state.match(regex);
+        });
+      };
+
+      // Credit https://stackoverflow.com/questions/2901102/how-to-print-a-number-with-commas-as-thousands-separators-in-javascript
+      function numberWithCommas(x) {
+        return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+      }
+
+      const displayMatches = function displayMatchesInput() {
+        const matchArray = findMatches(this.value, cities);
+        const html = matchArray
+          .map((match) => {
+            const regex = new RegExp(this.value, 'gi');
+            const cityName = match.city.replace(
+              regex,
+              `<span class="hl">${this.value}</span>`
+            );
+            const stateName = match.state.replace(
+              regex,
+              `<span class="hl">${this.value}</span>`
+            );
+
+            return `
+          <li>
+            <span class="name"> ${cityName}, ${stateName}</span>
+            <span class="population">${numberWithCommas(
+              match.population
+            )}</span>
+          </li>`;
+          })
+          .join('');
+        suggestions.innerHTML = html;
+      };
+
+      search.addEventListener('change', displayMatches);
+      search.addEventListener('keyup', displayMatches);
+    </script>
+  </body>
 </html>
