--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -1,46 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Console Tricks!</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Console Tricks!</title>
+  </head>
+  <body>
+    <p onClick="makeGreen()">×BREAK×DOWN×</p>
 
-  <p onClick="makeGreen()">×BREAK×DOWN×</p>
+    <script>
+      const dogs = [
+        { name: 'Snickers', age: 2 },
+        { name: 'hugo', age: 8 },
+      ];
 
-  <script>
-    const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
+      function makeGreen() {
+        const p = document.querySelector('p');
+        p.style.color = '#BADA55';
+        p.style.fontSize = '50px';
+      }
 
-    function makeGreen() {
-      const p = document.querySelector('p');
-      p.style.color = '#BADA55';
-      p.style.fontSize = '50px';
-    }
+      // Regular
+      console.log('hello world');
 
-    // Regular
+      // Interpolated
+      console.log('hello my name is %s', 'Tim');
 
-    // Interpolated
+      // Styled
+      console.log('%c I am some great text', 'font-size: 50px');
 
-    // Styled
+      // warning!
+      console.warn('OH NOOO');
 
-    // warning!
+      // Error :|
+      console.error('Whoopsie daysies');
 
-    // Error :|
+      // Info
+      console.info(
+        'Crocodiles tear apart someone in North Queensland every 3-4 months'
+      );
 
-    // Info
+      // Testing
+      console.assert(1 === 2, 'that is wrong');
 
-    // Testing
+      // clearing
+      console.clear();
 
-    // clearing
+      // Viewing DOM Elementsd
+      console.log(document.querySelector('p'));
+      console.dir(document.querySelector('p'));
+      console.clear();
 
-    // Viewing DOM Elements
+      // Grouping together
+      dogs.forEach((dog) => {
+        console.group(`${dog.name}`);
+        console.log(`This is ${dog.name}`);
+        console.log(`Dog's age ${dog.age}`);
+        console.groupEnd(`${dog.name}`);
+      });
 
-    // Grouping together
+      // counting
+      console.count('wes');
+      console.count('wes');
+      console.count('wes');
+      console.count('wes');
 
-    // counting
+      // timing
+      console.time('fetching data');
+      fetch('https://api.github.com/users/wesbos')
+        .then((data) => data.json())
+        .then((data) => {
+          console.timeEnd('fetching data');
+          console.log(data);
+        });
 
-    // timing
-
-  </script>
-</body>
+      console.table(dogs);
+    </script>
+  </body>
 </html>
